# Orbiter

./: .example.env  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
migrations/: 20240318000000_create_users_table.sql
src/: config.rs  main.rs
src/handlers/: auth.rs  mod.rs  user.rs  users.rs
src/middleware/: auth.rs
src/models/: user.rs
src/utils/: error.rs  jwt.rs  mod.rs
