[package]
name = "orbiter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
futures = "0.3"
jsonwebtoken = "9.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid"] }
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
utoipa = { version = "4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] } 